# dl-mini-course-anti-spoofing-ha

./: .gitignore  get_predictions.py  grades.csv  grading.py  pyproject.toml
src/configs/: baseline.yaml  inference.yaml
src/configs/dataloader/: asv.yaml
src/configs/datasets/: asv.yaml
src/configs/metrics/: eer.yaml
src/configs/model/: lcnn_model.yaml
src/configs/transforms/: asv.yaml
src/configs/writer/: wandb.yaml
src/datasets/: __init__.py  asv.py  base_dataset.py
src/loss/: __init__.py  asv.py
src/metrics/: __init__.py  eer_metric.py
src/model/: __init__.py  lcnn_model.py
src/utils/: io_utils.py
students_solutions/: nntumakov.csv
