[project]
name = "dl-mini-cource-anti-spoofing-ha"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
dependencies = [
  "torch==2.2.0",
  "torchvision==0.17.0",
  "torchmetrics",
  "numpy==1.26.4",
  "tqdm",
  "matplotlib",
  "pandas",
  "wandb",
  "comet_ml",
  "hydra-core",
  "safetensors>=0.5.3",
  "torchaudio>=2.2.0",
  "ipykernel>=6.30.1",
]

[project.optional-dependencies]
dev = ["ty", "ruff", "isort", "pre-commit"]
